--- a/packages/syncfusion_flutter_charts/pubspec.yaml
+++ b/packages/syncfusion_flutter_charts/pubspec.yaml
@@ -11,8 +11,7 @@ dependencies:
     sdk: flutter
   intl: ^0.17.0
   vector_math: ">=2.1.0 <=3.0.0"
-  syncfusion_flutter_core:
-   path: ../syncfusion_flutter_core
+  syncfusion_flutter_core: ^19.4.43+1
 
 
 flutter:
