--- a/packages/syncfusion_flutter_charts/pubspec.yaml
+++ b/packages/syncfusion_flutter_charts/pubspec.yaml
@@ -12,7 +12,9 @@ dependencies:
   intl: ^0.19.0
   vector_math: ">=2.1.0 <=3.0.0"
   syncfusion_flutter_core:
-      path: ../syncfusion_flutter_core
+    git:
+      url: git://github.com/syncfusion/flutter-widgets.git
+      path: packages/syncfusion_flutter_core
 
 dev_dependencies:
   flutter_test:
