--- a/packages/syncfusion_flutter_charts/pubspec.yaml
+++ b/packages/syncfusion_flutter_charts/pubspec.yaml
@@ -11,10 +11,7 @@ dependencies:
     sdk: flutter
   intl: ^0.19.0
   vector_math: ">=2.1.0 <=3.0.0"
-  syncfusion_flutter_core:
-    git:
-      url: git://github.com/syncfusion/flutter-widgets.git
-      path: packages/syncfusion_flutter_core
+  syncfusion_flutter_core: ^24.2.6
 
 dev_dependencies:
   flutter_test:
