--- a/packages/syncfusion_flutter_charts/pubspec.yaml
+++ b/packages/syncfusion_flutter_charts/pubspec.yaml
@@ -11,7 +11,8 @@ dependencies:
     sdk: flutter
   intl: ^0.19.0
   vector_math: ">=2.1.0 <=3.0.0"
-  syncfusion_flutter_core: ^24.2.6
+  syncfusion_flutter_core:
+    path: ../syncfusion_flutter_core
 
 dev_dependencies:
   flutter_test:
